--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/vue-query": "^5.40.1",
+    "@tanstack/vue-query-devtools": "^5.40.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
