--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
+    "vue-material-design-icons": "^5.3.0",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
