--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
     "vue-material-design-icons": "^5.3.0",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.1",
