--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/*": ["./src/*"]
     },
     "noImplicitAny": false,
-    "allowJs": true
+    "allowJs": true,
+    "outDir": "./docs"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
